force-app/main/default/objects/Filing__c/Filing__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <label>Filing</label>
    <nameField>
        <label>Application ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>