force-app/main/default/objects/Filing__c/fields/AccessionNumber__c.field-meta.xml
<CustomField>
    <fullName>AccessionNumber__c</fullName>
    <description>PacPoint-IC121918 - Created for BREG phase 1</description>
    <label>Accession Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>