force-app/main/default/objects/Filing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Accounts that are set as SEB/SEC accounts can be selected.</errorMessage>
        <filterItems>
            <field>Account.SEBSEC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Filing</relationshipLabel>
    <relationshipName>Filing</relationshipName>
    <type>Lookup</type>
</CustomField>