force-app/main/default/objects/Filing__c/fields/AccountantConsent__c.field-meta.xml
<CustomField>
    <fullName>AccountantConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Accountant&apos;s Consent letter (Form F)</inlineHelpText>
    <label>Accountant Consent</label>
    <type>Checkbox</type>
</CustomField>