force-app/main/default/objects/Filing__c/fields/AccountantConsentComments__c.field-meta.xml
<CustomField>
    <fullName>AccountantConsentComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Accountant Consent Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>