force-app/main/default/objects/Filing__c/fields/Addcurrentprofessionaldesignations__c.field-meta.xml
<CustomField>
    <fullName>Addcurrentprofessionaldesignations__c</fullName>
    <description>PacPoint - RA010219 - BREG Phase 1</description>
    <inlineHelpText>Add all professional designations.</inlineHelpText>
    <label>Add current professional designations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>