force-app/main/default/objects/Filing__c/fields/AddlNWBondRequirement__c.field-meta.xml
<CustomField>
    <fullName>AddlNWBondRequirement__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Additional Net Worth Bond requirement (rounded up) based on the selection above.</inlineHelpText>
    <label>Add&apos;l NW Bond Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>