force-app/main/default/objects/Filing__c/fields/ADVPart1__c.field-meta.xml
<CustomField>
    <fullName>ADVPart1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Submit a complete form ADV, Part 1 through the IARD system.</inlineHelpText>
    <label>ADV Part 1?</label>
    <type>Checkbox</type>
</CustomField>