force-app/main/default/objects/Filing__c/fields/ADVPart1Comments__c.field-meta.xml
<CustomField>
    <fullName>ADVPart1Comments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>ADV Part 1 Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>