force-app/main/default/objects/Filing__c/fields/ADVPart2Comments__c.field-meta.xml
<CustomField>
    <fullName>ADVPart2Comments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Note the home state of the principal place of business. Note the date of IA registration in Principal Place of Business (Home State).</inlineHelpText>
    <label>ADV Part 2 Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>