force-app/main/default/objects/Filing__c/fields/AffidavitNoSales__c.field-meta.xml
<CustomField>
    <fullName>AffidavitNoSales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Affidavit of no sales  (as needed)</inlineHelpText>
    <label>Affidavit No Sales?</label>
    <type>Checkbox</type>
</CustomField>