force-app/main/default/objects/Filing__c/fields/AffidavitNoSalesComments__c.field-meta.xml
<CustomField>
    <fullName>AffidavitNoSalesComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Affidavit No Sales Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>