force-app/main/default/objects/Filing__c/fields/Affidavitofnotransactions__c.field-meta.xml
<CustomField>
    <fullName>Affidavitofnotransactions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Affidavit of no transactions</inlineHelpText>
    <label>Affidavit of no transactions</label>
    <type>Checkbox</type>
</CustomField>