force-app/main/default/objects/Filing__c/fields/AgeDaysFormula__c.field-meta.xml
<CustomField>
    <fullName>AgeDaysFormula__c</fullName>
    <description>PacPoint-MV050919 - Created for BREG phase 1</description>
    <formula>IF( 
ISPICKVAL(Status__c, &quot;Filing Completed&quot;), 
DATEVALUE( ClosedDateTime__c ) - DATEVALUE(CreatedDate), 
TODAY() - DATEVALUE(CreatedDate) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>