force-app/main/default/objects/Filing__c/fields/AgeDaysOLd__c.field-meta.xml
<CustomField>
    <fullName>AgeDaysOLd__c</fullName>
    <description>PacPoint-CL041019 - Created for BREG Phase 1</description>
    <label>Age (Days)Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>