force-app/main/default/objects/Filing__c/fields/AggregateOfferingPrice__c.field-meta.xml
<CustomField>
    <fullName>AggregateOfferingPrice__c</fullName>
    <description>PacPoint-MV061019 - Created for BREG phase 1</description>
    <inlineHelpText>Enter the aggregate offering price of the securities to be sold in the State.</inlineHelpText>
    <label>Aggregate Offering Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>