force-app/main/default/objects/Filing__c/fields/AllDocumentsUploaded__c.field-meta.xml
<CustomField>
    <fullName>AllDocumentsUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV011519 - Created for BREG phase 1</description>
    <label>All Documents Uploaded</label>
    <type>Checkbox</type>
</CustomField>