force-app/main/default/objects/Filing__c/fields/AllowUserToPerformReviewer__c.field-meta.xml
<CustomField>
    <fullName>AllowUserToPerformReviewer__c</fullName>
    <description>(Reviewer__r.Email == &quot;cshimoda@dcca.hawaii.gov&quot;) &amp;&amp;  ($User.Email == &quot;byoshimura@dcca.hawaii.gov&quot; || $User.Email == &quot;yumi.hasegawa@pacificpointcorp.com&quot; )


(Reviewer__r.Email == &quot;tokuda@dcca.hawaii.gov.invalid&quot;) &amp;&amp;  ($User.Email == &quot;byoshimura@dcca.hawaii.gov.invalid&quot; || $User.Email == &quot;yumi.hasegawa+dccadev22@pacificpointcorp.com&quot; )</description>
    <formula>(Reviewer__r.Email == &quot;cshimoda@dcca.hawaii.gov&quot;) &amp;&amp;  ($User.Email == &quot;byoshimura@dcca.hawaii.gov&quot; || $User.Email == &quot;yumi.hasegawa@pacificpointcorp.com&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow User To Perform Reviewer</label>
    <type>Checkbox</type>
</CustomField>