force-app/main/default/objects/Filing__c/fields/AmendmentReasonOther__c.field-meta.xml
<CustomField>
    <fullName>AmendmentReasonOther__c</fullName>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <label>Amendment Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>