force-app/main/default/objects/Filing__c/fields/AmendmentType__c.field-meta.xml
<CustomField>
    <fullName>AmendmentType__c</fullName>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <formula>IF (ISPICKVAL( ApplicationType__c , &apos;Amendment&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;Filing Completed&apos;), &apos;Post-Effective&apos;, IF (ISPICKVAL(ApplicationType__c , &apos;Amendment&apos;) &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Filing Completed&apos;)), &apos;Pre-Effective&apos;, &apos;&apos;))</formula>
    <label>Amendment Type</label>
    <type>Text</type>
</CustomField>