force-app/main/default/objects/Filing__c/fields/AmendmentTypeOther__c.field-meta.xml
<CustomField>
    <fullName>AmendmentTypeOther__c</fullName>
    <description>PacPoint-IC100818 - Created for BREG phase 1</description>
    <label>Amendment Type Other</label>
    <type>TextArea</type>
</CustomField>