force-app/main/default/objects/Filing__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>PacPoint-MV061219 - Created for BREG phase 1</description>
    <formula>IF(
   RecordType.DeveloperName &lt;&gt; &quot;ByQualification&quot;,
   CashierCode__r.Amount__c , 
   IF(
    AND(
      ((AggregateOfferingPrice__c *(1/100))/10)&lt;2500,
     ((AggregateOfferingPrice__c *(1/100))/10)&gt;250 
    ), 
   ((AggregateOfferingPrice__c *(1/100))/10), 
    IF(
      ((AggregateOfferingPrice__c *(1/100))/10) &gt; 2500, 
      2500, 
      250) 
  ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>