force-app/main/default/objects/Filing__c/fields/AmountofSecuritiesbeingOffered__c.field-meta.xml
<CustomField>
    <fullName>AmountofSecuritiesbeingOffered__c</fullName>
    <description>PacPoint-IC101918 - Created for BREG phase 1</description>
    <label>Amount of Securities being Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>