force-app/main/default/objects/Filing__c/fields/ApplicationAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicationAutoNumber__c</fullName>
    <description>PacPoint-IC101118 - Created for BREG phase 1</description>
    <displayFormat>FL-{00000}</displayFormat>
    <label>Application AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>