force-app/main/default/objects/Filing__c/fields/ApplicationforRegistration__c.field-meta.xml
<CustomField>
    <fullName>ApplicationforRegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Application for Registration</label>
    <type>Checkbox</type>
</CustomField>