force-app/main/default/objects/Filing__c/fields/ApplicationforRegistrationComments__c.field-meta.xml
<CustomField>
    <fullName>ApplicationforRegistrationComments__c</fullName>
    <description>PacPoint-RA111318-BREGPhase 1</description>
    <label>Application for Registration Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>