force-app/main/default/objects/Filing__c/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Document Upload</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>