force-app/main/default/objects/Filing__c/fields/ApprovalConfirmationComments__c.field-meta.xml
<CustomField>
    <fullName>ApprovalConfirmationComments__c</fullName>
    <description>PacPoint - RA111318 - BREG Phase 1</description>
    <label>Approval Confirmation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>