force-app/main/default/objects/Filing__c/fields/BalanceSheetwithin30days__c.field-meta.xml
<CustomField>
    <fullName>BalanceSheetwithin30days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Balance Sheet as of a date within 30 calendar days of filing, verified by a duly authorized officer and notarized.</inlineHelpText>
    <label>Balance Sheet within 30 days</label>
    <type>Checkbox</type>
</CustomField>