force-app/main/default/objects/Filing__c/fields/BD12LSSatisfied__c.field-meta.xml
<CustomField>
    <fullName>BD12LSSatisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Not engaged in businesses listed in #12L or #12S. If yes, must be licensed and/or registered with State. VLA or IA</inlineHelpText>
    <label>BD 12L/S Satisfied?</label>
    <type>Checkbox</type>
</CustomField>