force-app/main/default/objects/Filing__c/fields/BDListofStateRegistrants__c.field-meta.xml
<CustomField>
    <fullName>BDListofStateRegistrants__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>List of State Registrants.</inlineHelpText>
    <label>BD List of State Registrants?</label>
    <type>Checkbox</type>
</CustomField>