force-app/main/default/objects/Filing__c/fields/BDScheduleA__c.field-meta.xml
<CustomField>
    <fullName>BDScheduleA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Schedule A (Direct owners and executive officers)</inlineHelpText>
    <label>BD Schedule A?</label>
    <type>Checkbox</type>
</CustomField>