force-app/main/default/objects/Filing__c/fields/BDScheduleB__c.field-meta.xml
<CustomField>
    <fullName>BDScheduleB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Schedule B (Indirect owner information)</inlineHelpText>
    <label>BD Schedule B?</label>
    <type>Checkbox</type>
</CustomField>