force-app/main/default/objects/Filing__c/fields/BDScheduleC__c.field-meta.xml
<CustomField>
    <fullName>BDScheduleC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Schedule C (Amendments to Schedules A &amp; B)</inlineHelpText>
    <label>BD Schedule C?</label>
    <type>Checkbox</type>
</CustomField>