force-app/main/default/objects/Filing__c/fields/BDScheduleDRP__c.field-meta.xml
<CustomField>
    <fullName>BDScheduleDRP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Schedule DRP (Disclosure reporting page)</inlineHelpText>
    <label>BD Schedule DRP?</label>
    <type>Checkbox</type>
</CustomField>