force-app/main/default/objects/Filing__c/fields/BondingRequirementsComments__c.field-meta.xml
<CustomField>
    <fullName>BondingRequirementsComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Bonding Requirements Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>