force-app/main/default/objects/Filing__c/fields/Brochures__c.field-meta.xml
<CustomField>
    <fullName>Brochures__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV042619 - Created for BREG phase 1</description>
    <label>Brochures</label>
    <type>Checkbox</type>
</CustomField>