force-app/main/default/objects/Filing__c/fields/Carveoutlanguage__c.field-meta.xml
<CustomField>
    <fullName>Carveoutlanguage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Franchise Agreement &quot;Integration Section&quot; must have FTC &quot;carve-out&quot; language.</inlineHelpText>
    <label>Carve-out language</label>
    <type>Checkbox</type>
</CustomField>