force-app/main/default/objects/Filing__c/fields/CarveoutlanguageComments__c.field-meta.xml
<CustomField>
    <fullName>CarveoutlanguageComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Carve-out language Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>