force-app/main/default/objects/Filing__c/fields/CashierCode__c.field-meta.xml
<CustomField>
    <fullName>CashierCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV122818 - Created for BREG phase 1</description>
    <label>Cashier Code</label>
    <referenceTo>CashierCode__c</referenceTo>
    <relationshipLabel>Filings</relationshipLabel>
    <relationshipName>Filings</relationshipName>
    <type>Lookup</type>
</CustomField>