force-app/main/default/objects/Filing__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Certification; original signature and correctly referencing FDD attached.</inlineHelpText>
    <label>Certification</label>
    <type>Checkbox</type>
</CustomField>