force-app/main/default/objects/Filing__c/fields/CommunityFilingReceived__c.field-meta.xml
<CustomField>
    <fullName>CommunityFilingReceived__c</fullName>
    <description>PacPoint-MV012219 - Created for BREG phase 1</description>
    <formula>IF(AllDocumentsUploaded__c = TRUE, 
IF (PaymentCompleted__c = TRUE, 
OR( 
AND(RecordType.Name = &apos;By Qualification&apos;,TEXT(ApplicationType__c)= &apos;New&apos;),
AND(RecordType.Name = &apos;By Qualification&apos;,TEXT(ApplicationType__c)= &apos;Renewal&apos;), 
AND(RecordType.Name = &apos;Franchise&apos;,TEXT(ApplicationType__c)= &apos;Amendment&apos;), 
AND(RecordType.Name = &apos;Franchise&apos;,TEXT(ApplicationType__c)= &apos;New&apos;), 
AND(RecordType.Name = &apos;Franchise&apos;,TEXT(ApplicationType__c)= &apos;Renewal&apos;), 
AND(RecordType.Name = &apos;Issuer Dealer&apos;,TEXT(ApplicationType__c)= &apos;New&apos;), 
AND(RecordType.Name = &apos;Issuer Dealer&apos;,TEXT(ApplicationType__c)= &apos;Renewal&apos;),  
AND(RecordType.Name = &apos;Issuer Dealer Agent&apos;,TEXT(ApplicationType__c)= &apos;New&apos;), 
AND(RecordType.Name = &apos;Issuer Dealer Agent&apos;,TEXT(ApplicationType__c)= &apos;Renewal&apos;), 
AND(RecordType.Name = &apos;Model Accredited Investor&apos;,TEXT(ApplicationType__c)= &apos;New&apos;), 
AND(RecordType.Name = &apos;Mutual Fund&apos;,TEXT(ApplicationType__c)= &apos;New&apos;), 
AND(RecordType.Name = &apos;Mutual Fund&apos;,TEXT(ApplicationType__c)= &apos;Renewal&apos;), 
AND(RecordType.Name = &apos;Regulation A&apos;,TEXT(ApplicationType__c)= &apos;New&apos;), 
AND(RecordType.Name = &apos;Regulation A&apos;,TEXT(ApplicationType__c)= &apos;Renewal&apos;), 
AND(RecordType.Name = &apos;Regulation D&apos;,TEXT(ApplicationType__c)= &apos;New&apos;), 
AND(RecordType.Name = &apos;Small Company Offering Registration (SCOR)&apos;,TEXT(ApplicationType__c)= &apos;New&apos;),
AND(RecordType.Name = &apos;Unit Investment Trust&apos;,TEXT(ApplicationType__c)= &apos;New&apos;), 
AND(RecordType.Name = &apos;Unit Investment Trust&apos;,TEXT(ApplicationType__c)= &apos;Renewal&apos;) 
), 
OR( 

AND(RecordType.Name = &apos;Broker-Dealer&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;), 
AND(RecordType.Name = &apos;By Qualification&apos;,TEXT(ApplicationType__c)= &apos;Amendment&apos;), 
AND(RecordType.Name = &apos;By Qualification&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;),  
AND(RecordType.Name = &apos;Franchise&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;), 
AND(RecordType.Name = &apos;Investment Adviser&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;), 
AND(RecordType.Name = &apos;Issuer Dealer&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;), 
AND(RecordType.Name = &apos;Issuer Dealer Agent&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;), 
AND(RecordType.Name = &apos;Model Accredited Investor&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;), 
AND(RecordType.Name = &apos;Mutual Fund&apos;,TEXT(ApplicationType__c)= &apos;Amendment&apos;), 
AND(RecordType.Name = &apos;Mutual Fund&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;), 
AND(RecordType.Name = &apos;Regulation A&apos;,TEXT(ApplicationType__c)= &apos;Amendment&apos;), 
AND(RecordType.Name = &apos;Regulation A&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;), 
AND(RecordType.Name = &apos;Regulation D&apos;,TEXT(ApplicationType__c)= &apos;Amendment&apos;), 
AND(RecordType.Name = &apos;Small Company Offering Registration (SCOR)&apos;,TEXT(ApplicationType__c)= &apos;Amendment&apos;), 
AND(RecordType.Name = &apos;Small Company Offering Registration (SCOR)&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;),
AND(RecordType.Name = &apos;Unit Investment Trust&apos;,TEXT(ApplicationType__c)= &apos;Amendment&apos;), 
AND(RecordType.Name = &apos;Unit Investment Trust&apos;,TEXT(ApplicationType__c)= &apos;Document Upload&apos;)
) 
), 
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Filing Received</label>
    <type>Checkbox</type>
</CustomField>