force-app/main/default/objects/Filing__c/fields/CommunityFilingStatus__c.field-meta.xml
<CustomField>
    <fullName>CommunityFilingStatus__c</fullName>
    <description>PacPoint-MV022620 - Created for BREG phase 1</description>
    <formula>CASE( Status__c , 
&quot;In Progress&quot;, &quot;In Progress&quot;, 
&quot;Filing Received&quot;, &quot;Filing Received&quot;,
&quot;Assigned for Review&quot;, &quot;Review in Progress&quot;,
&quot;Review in Progress&quot;, &quot;Review in Progress&quot;,
&quot;Deficiency Letter Sent&quot;, &quot;Deficiency Letter Sent&quot;,
&quot;Deficiency Response Received&quot;, &quot;Review in Progress&quot;,
&quot;Reviewing Deficiency Response&quot;, &quot;Review in Progress&quot;,
&quot;Filing Completed&quot;, &quot;Filing Completed&quot;,
&quot;Filing Withdrawn&quot;, &quot;Filing Withdrawn&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Filing Status</label>
    <type>Text</type>
</CustomField>