force-app/main/default/objects/Filing__c/fields/CommunityURL__c.field-meta.xml
<CustomField>
    <fullName>CommunityURL__c</fullName>
    <description>PacPoint:RdG280320 - Case #7677 - For BREG Phase 1 Support</description>
    <label>Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>