force-app/main/default/objects/Filing__c/fields/Complaintarbitrationcivillitigation_c__c.field-meta.xml
<CustomField>
    <fullName>Complaintarbitrationcivillitigation_c__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>Is the complaint, arbitration, civil litigation pending?</inlineHelpText>
    <label>Complaint, arbitration, civil litigation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>