force-app/main/default/objects/Filing__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <description>PacPoint-PH032219 - Created for BREG phase 1. Created for Filings Checklist Updates</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>