force-app/main/default/objects/Filing__c/fields/ConfirmationNoHIAccounts__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationNoHIAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Confirmation of no HI accounts by clearing firm</inlineHelpText>
    <label>Confirmation No HI Accounts?</label>
    <type>Checkbox</type>
</CustomField>