force-app/main/default/objects/Filing__c/fields/ConfirmationofNoHawaiiAccountsComments__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationofNoHawaiiAccountsComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Confirmation of No HI Accounts Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>