force-app/main/default/objects/Filing__c/fields/Confirmwithdrawal__c.field-meta.xml
<CustomField>
    <fullName>Confirmwithdrawal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV012219 - Created for BREG phase 1</description>
    <label>Confirm Withdrawal</label>
    <type>Checkbox</type>
</CustomField>