force-app/main/default/objects/Filing__c/fields/ConsentToService__c.field-meta.xml
<CustomField>
    <fullName>ConsentToService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC100818 - Created for BREG phase 1</description>
    <label>Consent to Service</label>
    <type>Checkbox</type>
</CustomField>