force-app/main/default/objects/Filing__c/fields/ConsenttoServiceComments__c.field-meta.xml
<CustomField>
    <fullName>ConsenttoServiceComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Consent to Service Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>