force-app/main/default/objects/Filing__c/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Contracts-Submit all investment advisory agreements, contracts, and brochures that will be presented to the client. 16-39-430(b) and 16-39-439.</inlineHelpText>
    <label>Contracts</label>
    <type>Checkbox</type>
</CustomField>