force-app/main/default/objects/Filing__c/fields/Copyoftheoffering__c.field-meta.xml
<CustomField>
    <fullName>Copyoftheoffering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Copy of the offering circular or similar document provided to the accredited investor.</inlineHelpText>
    <label>Copy of the offering</label>
    <type>Checkbox</type>
</CustomField>