force-app/main/default/objects/Filing__c/fields/CopyoftheofferingComments__c.field-meta.xml
<CustomField>
    <fullName>CopyoftheofferingComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Copy of the offering - Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>