force-app/main/default/objects/Filing__c/fields/CostsandSourcesofFunds__c.field-meta.xml
<CustomField>
    <fullName>CostsandSourcesofFunds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Franchisor&apos;s Costs and Sources of Funds (Form B)</inlineHelpText>
    <label>Costs and Sources of Funds</label>
    <type>Checkbox</type>
</CustomField>