force-app/main/default/objects/Filing__c/fields/CRD__c.field-meta.xml
<CustomField>
    <fullName>CRD__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1
Updated - RA012319 - BREG Phase 1</description>
    <label>CRD#</label>
    <type>TextArea</type>
</CustomField>