force-app/main/default/objects/Filing__c/fields/CRDsEntered__c.field-meta.xml
<CustomField>
    <fullName>CRDsEntered__c</fullName>
    <description>PacPoint-IC100818 - Created for BREG phase 1</description>
    <formula>IF( NOT( ISBLANK(Account__r.CRD__c) ), true, false)</formula>
    <label>CRD#s Entered?</label>
    <type>Checkbox</type>
</CustomField>