force-app/main/default/objects/Filing__c/fields/CreatedInCommunity__c.field-meta.xml
<CustomField>
    <fullName>CreatedInCommunity__c</fullName>
    <description>&quot;PacPoint-MD102919 - Created for phase1</description>
    <formula>CASE(CreatedBy.UserType,
    &quot;PowerPartner&quot;, 1,
    &quot;CSPLitePortal&quot;, 1,
    &quot;CustomerSucsess&quot;, 1,
    &quot;PowerCustomerSuccess&quot;, 1,0) == 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created In Community</label>
    <type>Checkbox</type>
</CustomField>