force-app/main/default/objects/Filing__c/fields/CustodyAdvsingpooledvehicles__c.field-meta.xml
<CustomField>
    <fullName>CustodyAdvsingpooledvehicles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Custody - Advising pooled investment vehicles - $5k NW at all times. 16-39-433 (b)(2)</inlineHelpText>
    <label>Custody- Advising pooled vehicles</label>
    <type>Checkbox</type>
</CustomField>