force-app/main/default/objects/Filing__c/fields/CustodyClearingAgreement__c.field-meta.xml
<CustomField>
    <fullName>CustodyClearingAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Custoday and/or Clearing Agreement</inlineHelpText>
    <label>Custody/Clearing Agreement?</label>
    <type>Checkbox</type>
</CustomField>