force-app/main/default/objects/Filing__c/fields/CustodyClearingAgreementComments__c.field-meta.xml
<CustomField>
    <fullName>CustodyClearingAgreementComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Custody/Clearing Agreement Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>