force-app/main/default/objects/Filing__c/fields/CustodyMaintain35k__c.field-meta.xml
<CustomField>
    <fullName>CustodyMaintain35k__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Custody - Maintain $35k Net Worth at all times. 16-39-433 (b)</inlineHelpText>
    <label>Custody - Maintain $35k</label>
    <type>Checkbox</type>
</CustomField>