force-app/main/default/objects/Filing__c/fields/CustodyOnlytodeductfees__c.field-meta.xml
<CustomField>
    <fullName>CustodyOnlytodeductfees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Custody - Only to deduct fees - Maintain $5k NW at all times. 16-39-433 (b)(1)</inlineHelpText>
    <label>Custody - Only to deduct fees</label>
    <type>Checkbox</type>
</CustomField>