force-app/main/default/objects/Filing__c/fields/CustodyorDiscretion50k__c.field-meta.xml
<CustomField>
    <fullName>CustodyorDiscretion50k__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Custody or Discretion - shall be bonded in the amount of $50,000. 16-39-434 (a)(1)</inlineHelpText>
    <label>Custody or Discretion - $50k</label>
    <type>Checkbox</type>
</CustomField>