force-app/main/default/objects/Filing__c/fields/CustodyorDiscretionMinNW__c.field-meta.xml
<CustomField>
    <fullName>CustodyorDiscretionMinNW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Custody or Discretion - applicant does not meet the Minimum Net Worth requirement. Applicant shall be bonded in the amount of the net worth deficiency rounded up to the nearest $5k. 16-39-434(a)(2)</inlineHelpText>
    <label>Custody or Discretion - Min NW</label>
    <type>Checkbox</type>
</CustomField>